--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
     "@types/chec__commerce.js": "^2.8.11",
+    "html-react-parser": "^5.1.10",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
