--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/chec__commerce.js": "^2.8.11",
     "html-react-parser": "^5.1.10",
     "next": "14.2.4",
