--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chec/commerce.js": "^2.8.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/chec__commerce.js": "^2.8.11",
+    "formik": "^2.4.6",
     "html-react-parser": "^5.1.10",
     "next": "14.2.4",
     "react": "^18",
