--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/js-cookie": "^3.0.6",
     "formik": "^2.4.6",
@@ -17,6 +18,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-toastify": "^10.0.5",
     "square": "^37.1.1",
     "yup": "^1.4.0"
