--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/js-cookie": "^3.0.6",
+    "country-state-city": "^3.2.1",
     "formik": "^2.4.6",
     "html-react-parser": "^5.1.10",
     "js-cookie": "^3.0.5",
